# bbswift-framework

./: .gitignore  README.md  babel.config.js  metro-resovler.js  metro.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
dest/: index.d.ts  index.js  index.js.map
dest/barretenberg/: index.d.ts  index.js  index.js.map
dest/barretenberg_api/: index.d.ts  index.js  index.js.map
dest/bigint-array/: index.d.ts  index.js  index.js.map
dest/circuits.js-crypto/: index.js  index.js.map
dest/circuits.js-crypto/aes128/: index.d.ts  index.js  index.js.map
dest/circuits.js-crypto/ecdsa/: index.d.ts  index.js  index.js.map  signature.d.ts  signature.js  signature.js.map
dest/circuits.js-crypto/grumpkin/: index.d.ts  index.js  (+1 more)
dest/random/: index.d.ts  index.js  index.js.map
dest/serialize/: buffer_reader.d.ts  buffer_reader.js  buffer_reader.js.map  index.js  index.js.map  output_type.d.ts  output_type.js  output_type.js.map  serialize.d.ts  serialize.js  serialize.js.map
dest/types/: fields.d.ts  fields.js  fields.js.map  fixed_size_buffer.d.ts  fixed_size_buffer.js  fixed_size_buffer.js.map  index.js  index.js.map  point.d.ts  point.js  point.js.map  ptr.d.ts  ptr.js  ptr.js.map  raw_buffer.d.ts  raw_buffer.js  raw_buffer.js.map
ios/: .gitignore  BBSwiftModule-Bridging-Header.h  BBSwiftModule.m  BBSwiftModule.swift  PodFile  react-native-bb.js.podspec  react-native-bb.podspec
ios/BBSwift/: .gitignore  Package.swift
ios/BBSwift/Rust/: Cargo.toml  build.rs
ios/BBSwift/Rust/src/: lib.rs
src/barretenberg/: index.ts
src/barretenberg_api/: index.ts
(+25 files in other folders)
